<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_bno055</name>
  <version>2.0.0</version>
  <description>I2C driver for a BNO055 IMU. Tested on Jetson TX2.</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>BSD</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
